Harden blank checks in config warnings
Co-authored-by: davorn987 <215653792+davorn987@users.noreply.github.com>