@@ -20,9 +20,9 @@ public class Config {
     private static Config instance;
     private final Properties props = new Properties();
 
-    private String envOrDefault(String key, String fallback) {
+    private static String envOrDefault(String key, String fallback) {
         String value = System.getenv(key);
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             return fallback;
         }
         return value;
@@ -104,7 +104,7 @@ public class Config {
 
     private void warnIfBlank(String key, String label) {
         String value = props.getProperty(key);
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             System.err.println("Missing configuration for " + label + " (" + key + "). Set it in " + CONFIG_FILE + " or via environment variables.");
         }
     }
